# atomic_habbits_drf

./: .gitignore  ReadMe.md  docker-compose.yaml  pyproject.toml  template_env_prod
config/: celery.py  settings.py  template.env  urls.py
main/: models.py  permissions.py  serializaers.py  tasks.py  tests.py  urls.py  validators.py  views.py
main/migrations/: 0001_initial.py
users/: managers.py  models.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_remove_user_username_user_tg_id_user_tg_username.py  0003_alter_user_tg_id_alter_user_tg_username.py  0004_alter_user_managers.py
